--- a/style.css
+++ b/style.css
@@ -21,9 +21,14 @@
 .flex-blackjack-row-1 div{
     border: 1px solid black;
     padding: 10px;
-    height: 350px;
+    height: 380px;
     text-align: center;
     flex: 1;
+}
+
+.flex-blackjack-row-1 img{
+    width: 25%;
+    padding: 5px;
 }
 
 .flex-blackjack-row-2 div{
